--- a/src/AutoTest.Server/site/index.html
+++ b/src/AutoTest.Server/site/index.html
@@ -3,10 +3,11 @@
     <meta charset="utf-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script src="bellyrub-client.js"></script>
 
     <script id="listTemplate" type="text/x-handlebars-template">
         {{#each errors}}
-            <div id="{{id}}" class="listitem" onclick="selectItem({{id}});">{{id}} {{message}}</div>
+            <div id="{{id}}" class="listitem errorItem" onclick="itemClicked({{id}});">{{message}}</div>
             <div id="{{id}}_details" class="listitemDetailsHidden">
                 Project: {{error.project}}<br>
                 File: <div name="link" class="listitemLink">
@@ -17,8 +18,8 @@
             </div>
         {{/each}}
         {{#each failures}}
-            <div id="{{id}}" class="listitem" onclick="selectItem({{id}});">
-                <div>{{id}} {{failed.test.display_name}}</div>
+            <div id="{{id}}" class="listitem failedItem" onclick="itemClicked({{id}});">
+                <div>{{failed.test.display_name}}</div>
             </div>
             <div id="{{id}}_details" class="listitemDetailsHidden">
                 Assembly: {{failed.assembly}}<br>
@@ -36,8 +37,8 @@
             </div>
         {{/each}}
         {{#each ignored}}
-            <div id="{{id}}" class="listitem" onclick="selectItem({{id}});">
-                <div>{{id}} {{ignored.test.display_name}}</div>
+            <div id="{{id}}" class="listitem ignoredItem" onclick="itemClicked({{id}});">
+                <div>{{ignored.test.display_name}}</div>
             </div>
             <div id="{{id}}_details" class="listitemDetailsHidden">
                 Assembly: {{ignored.assembly}}<br>
@@ -55,7 +56,7 @@
             </div>
         {{/each}}
         {{#each warnings}}
-            <div id="{{id}}" class="listitem" onclick="selectItem({{id}});">{{id}} {{message}}</div>
+            <div id="{{id}}" class="listitem warningItem" onclick="itemClicked({{id}});">{{message}}</div>
             <div id="{{id}}_details" class="listitemDetailsHidden">
                 Project: {{warning.project}}<br>
                 File: <div name="link" class="listitemLink">
@@ -69,9 +70,10 @@
 </head> 
 <body>
     <a href="javascript:void(0)" onclick="send('build-test-all', {});">Build and test all</a>
-    <img id="status-picture" src="" />
-    <div id="status"></div>
-    <div id="list"></div>
+    <img id="status-picture" class="statusImage" src="" />
+    <div id="status" class="statusText"></div>
+    <a href="javascript:void(0)" onclick="send('abort-run', {});">Abort</a>
+    <div id="list" class="itemList"></div>
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script src="js/handlebars.js"></script>
