Added pause resume and possibility to get engine state

--- a/src/AutoTest.Server/site/index.html
+++ b/src/AutoTest.Server/site/index.html
@@ -72,6 +72,8 @@
 
     <a href="javascript:void(0)" onclick="buildAndTestAll();">Build and test all</a>
     <a href="javascript:void(0)" onclick="detectRecursionOnNextRun();">Detect recursive run</a>
+    <a href="javascript:void(0)" onclick="pauseEngine();">Pause</a>
+    <a href="javascript:void(0)" onclick="resumeEngine();">Resume</a>
     <img id="status-picture" class="statusImage" src="" />
     <div id="status" class="statusText"></div>
     <a href="javascript:void(0)" onclick="abortRun();">Abort</a>
